# myneBackEnd

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
feedback/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0002_alter_feedback_author.py  0003_auto_20220109_0231.py
personal/: settings.py  urls.py
